--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,16 @@
 @import url("https://use.typekit.net/tog1idc.css");
 
-*{
+* {
     margin: 0;
-    padding: 0 ;
+    padding: 0;
     box-sizing: border-box;
 }
+
 ::-webkit-scrollbar {
     width: 0;
     background: transparent;
 }
+
 body {
     background-color: #161616;
     display: flex;
@@ -16,8 +18,18 @@ body {
     align-items: center;
     width: 100vw;
     max-height: 100vh;
-    font-family: Poppins!important;
+    font-family: Poppins !important;
     scrollbar-width: none;
+}
+
+.button-normalize {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
 }
 
 .container-phone {
@@ -33,13 +45,25 @@ body {
 }
 
 .container-user-img {
-    width: 65px;
-    height: 65px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
-    background: url(./wallhaven-q288gq.png);
+    background: url(./assets/img/user.png);
     background-size: cover;
     background-position-x: center;
     background-position-y: center;
+}
+
+.button-notifications {
+    position: relative;
+}
+
+.dot-notifications {
+    position: absolute;
+    color: red;
+    font-size: 30px;
+    right: 2px;
+    top: -18px;
 }
 
 .username {
@@ -49,44 +73,45 @@ body {
 .main {
     background-image: url(./assets/img/bg-home.jpg);
     background-size: cover;
-    height:85%;
+    height: 85%;
     background-position-x: 50%;
+
 }
 
 .title-home {
- font-size: 50px;
- font-weight: bolder;
- text-align: end;
- background-color: #16161600;
+    font-size: 50px;
+    font-weight: bolder;
+    text-align: end;
+    background-color: #16161600;
 }
 
 .container-info {
-    display:flex;
+    display: flex;
     flex-direction: column;
     justify-content: end;
 }
 
-.important-info{
- background-color: #C44a35;
- padding: 2rem;
- width: 80%;
- text-align: center;
+.important-info {
+    background-color: #C44a35;
+    padding: 2rem;
+    width: 80%;
+    text-align: center;
 
 }
 
 .rules {
     margin-left: auto;
-    border-radius: 2rem 0 0 2rem!important;
+    border-radius: 2rem 0 0 2rem !important;
     margin-top: auto;
 }
 
 .contact {
-    border-radius: 0 2rem 2rem 0!important;
+    border-radius: 0 2rem 2rem 0 !important;
 }
 
 .nav-bar {
-    background: rgb(95,161,153);
-    background: linear-gradient(0deg, rgba(95,161,153,1) 0%, rgba(150,184,115,1) 36%, rgba(184,198,91,1) 65%, rgba(224,200,6,1) 100%, rgba(224,199,2,1) 100%, rgba(229,204,6,1) 130%);
+    background: rgb(95, 161, 153);
+    background: linear-gradient(0deg, rgba(95, 161, 153, 1) 0%, rgba(150, 184, 115, 1) 36%, rgba(184, 198, 91, 1) 65%, rgba(224, 200, 6, 1) 100%, rgba(224, 199, 2, 1) 100%, rgba(229, 204, 6, 1) 130%);
     position: fixed;
     bottom: 0;
     width: 100%;
@@ -108,7 +133,7 @@ body {
     border-radius: 1rem;
     width: 80%;
     margin: auto;
-    display:flex;
+    display: flex;
 }
 
 .selectors {
@@ -131,6 +156,7 @@ body {
     max-width: 100vw;
     width: 100vw;
 }
+
 /* .container-schedule {
     margin-bottom: 5rem;
 } */
@@ -146,7 +172,7 @@ body {
     border-radius: 1rem;
     height: 3rem;
     display: flex;
-    align-items: center!important;
+    align-items: center !important;
     justify-content: center;
 }
 
@@ -154,23 +180,27 @@ body {
     width: 33.33%;
     height: 3rem;
     padding: 0 1rem;
-    border-radius: 1rem!important;
+    border-radius: 1rem !important;
     display: flex;
-    align-items: center!important;
+    align-items: center !important;
     justify-content: center;
-    border: none!important;
+    border: none !important;
 }
 
-.btn-check:active + .btn, .btn-check:checked + .btn, .btn.active, .btn.show, .btn:active {
-    background-color: #C44a35!important;
+.btn-check:active+.btn,
+.btn-check:checked+.btn,
+.btn.active,
+.btn.show,
+.btn:active {
+    background-color: #C44a35 !important;
     border: none;
     box-shadow: 0px 1px 5px -1px #53231a;
 }
 
 
 .selection:hover {
-    background-color: #C44a35!important;
-    border: none!important;
+    background-color: #C44a35 !important;
+    border: none !important;
 }
 
 .container-cards {
@@ -192,27 +222,19 @@ body {
     width: 8px;
     position: absolute;
     height: 70%;
-    
+
     border-radius: 0.5rem;
 }
 
 .buttons-event {
- height: 100%;
- height: 9rem;
+    height: 100%;
+    height: 9rem;
 }
 
-.button-normalize {
-    background: none;
-	color: inherit;
-	border: none;
-	padding: 0;
-	font: inherit;
-	cursor: pointer;
-	outline: inherit;
-}
+
 
 .container-event-map {
-    width:100vw;
+    width: 100vw;
     height: 60%;
     max-height: 100vh;
 }
