--- a/styles.css
+++ b/styles.css
@@ -155,11 +155,9 @@ body {
     margin-bottom: 12rem;
     max-width: 100vw;
     width: 100vw;
+    padding-bottom: 5rem;
 }
 
-/* .container-schedule {
-    margin-bottom: 5rem;
-} */
 .title-schedule {
     width: 100%;
     font-size: 1.25rem;
@@ -215,6 +213,10 @@ body {
     position: relative;
     width: 90%;
     height: 9rem;
+}
+
+.title-card {
+    font-size: 1.25rem;
 }
 
 .card-mark {
