--- a/public/styles.css
+++ b/public/styles.css
@@ -12,7 +12,7 @@
 }
 
 body {
-    background-color: #161616;
+    background-color: white !important;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -20,12 +20,14 @@ body {
     max-height: 100vh;
     font-family: Poppins !important;
     scrollbar-width: none;
-    
+
 }
+
 .body {
     max-height: 100vh;
-    overflow: hidden;
+
 }
+
 .button-normalize {
     background: none;
     color: inherit;
@@ -38,7 +40,7 @@ body {
 }
 
 .container-phone {
-    background-color: rgb(250, 247, 243);
+    background-color:white!important;
     width: 100vw;
     height: 100vh;
     max-height: 100vh;
@@ -65,7 +67,7 @@ body {
 
 .dot-notifications {
     position: absolute;
-    color: red;
+    color: #C44a35;
     font-size: 30px;
     right: 2px;
     top: -17px;
@@ -78,22 +80,29 @@ body {
 .main {
     background-image: url(./assets/img/bg-home.jpg);
     background-size: cover;
-    height: 85%;
     background-position-x: 50%;
-
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex-grow: 1;
 }
-
+.container-title-home {
+    padding-left: 1rem;
+}
 .title-home {
     font-size: 50px;
     font-weight: bolder;
     text-align: end;
     background-color: #16161600;
+    text-shadow: 1px 1px #5fa199, 2px 2px #C44a35;
 }
 
 .container-info {
     display: flex;
     flex-direction: column;
-    justify-content: end;
+    justify-content: space-around;
+    gap: 1rem;
+    padding-bottom: 1rem;
 }
 
 .important-info {
@@ -108,7 +117,7 @@ body {
 .rules {
     margin-left: auto;
     border-radius: 2rem 0 0 2rem !important;
-    margin-top: auto;
+    
 }
 
 .contact {
@@ -118,16 +127,21 @@ body {
 .nav-bar {
     /* background: rgb(196,74,53);
 background: linear-gradient(0deg, rgba(196,74,53,1) 0%, rgba(218,197,31,1) 100%); */
-background: rgb(196,74,53);
-background: linear-gradient(0deg, rgba(196,74,53,1) 0%, rgba(95,161,153,1) 100%);
-    position: fixed;
-    bottom: 0;
+    background: rgb(196, 74, 53);
+    background: linear-gradient(0deg, rgba(196, 74, 53, 1) 0%, rgba(95, 161, 153, 1) 100%);
+    /* position: fixed;
+    bottom: 0; */
     width: 100%;
     height: 2.5rem;
     display: flex;
     justify-content: space-around;
     align-items: end;
     border-radius: 1.5rem 1.5rem 0 0;
+}
+
+.nav-bar-schedule {
+    position: fixed;
+    bottom: -1px;
 }
 
 .iconos-nav {
@@ -159,25 +173,23 @@ background: linear-gradient(0deg, rgba(196,74,53,1) 0%, rgba(95,161,153,1) 100%)
 }
 
 .main-schedule {
-    margin-top: 7rem;
-    margin-bottom: 12rem;
+    margin-top: 6rem;
+    margin-bottom: 4rem!important;
     max-width: 100vw;
     width: 100vw;
-    padding-bottom: 5rem;
+    padding-bottom: 4rem !important;
 }
 
 .title-schedule {
-    width: 90%;
-    margin: auto;
-    font-size: 1.25rem;
+    font-size: 1.125rem;
     margin-top: 0.75rem;
     margin-bottom: 0.75rem;
- 
+
 }
 
 .schedule-selection {
     width: 90%;
-    background-color: #1616166b;
+    background-color: #1616163a;
     margin: auto;
     border-radius: 1rem;
     height: 3rem;
@@ -185,13 +197,17 @@ background: linear-gradient(0deg, rgba(196,74,53,1) 0%, rgba(95,161,153,1) 100%)
     align-items: center !important;
     justify-content: center;
 }
-ol, ul {
-    padding-left: 0.5rem!important;
+
+ol,
+ul {
+    padding-left: 0.5rem !important;
 }
+
 .title-rules {
     font-size: 1.125rem;
     font-weight: 600;
 }
+
 .selection {
     width: 33.33%;
     height: 3rem;
@@ -201,42 +217,45 @@ ol, ul {
     align-items: center !important;
     justify-content: center;
     border: none !important;
+    color: rgb(0, 0, 0) !important;
 }
+
 .container-input {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     gap: 0 0.5rem;
 }
+
 .button-form {
-    padding: 0.15rem 1rem 0rem 1rem!important;
-    border:none!important;
-    border-radius: 1rem!important;
-    background-color: gray!important;
-    color: white!important;
-    margin-bottom: 1rem!important;
-    
+    padding: 0.50rem 1rem 0.40rem 1rem !important;
+    border: none !important;
+    border-radius: 1rem !important;
+    background-color: #4d8c85 !important;
+    color: white !important;
+    margin-bottom: 1rem !important;
+
 }
 
 
 legend {
-    font-size: 1.125rem!important;
-    margin-bottom: 0!important;
+    font-size: 1rem !important;
+    margin-bottom: 0 !important;
 }
+
 .btn-check:active+.btn,
 .btn-check:checked+.btn,
 .btn.active,
 .btn.show,
 .btn:active {
-    background: rgb(196,74,53)!important;
-background: linear-gradient(0deg, rgba(196,74,53,1) 0%, rgba(95,161,153,1) 100%)!important;
+    background: rgb(196, 74, 53) !important;
+    background: linear-gradient(0deg, rgba(196, 74, 53, 1) 0%, rgba(95, 161, 153, 1) 100%) !important;
     border: none;
     box-shadow: 0px 1px 5px -1px #53231a;
-    color: white;
-}
-.selection {
     color: white!important;
 }
+
+
 
 /* .selection:hover {
     background-color: #C44a35 !important;
@@ -248,7 +267,7 @@ background: linear-gradient(0deg, rgba(196,74,53,1) 0%, rgba(95,161,153,1) 100%)
 }
 
 .card-event {
-    background-color: #1616166b;
+    background-color: #1616163a;
     border-radius: 1rem;
     margin: auto;
     margin-top: 1.5rem;
@@ -256,8 +275,9 @@ background: linear-gradient(0deg, rgba(196,74,53,1) 0%, rgba(95,161,153,1) 100%)
     width: 90%;
     height: 9rem;
 }
-.card-event-notification  {
-    background-color: #1616166b;
+
+.card-event-notification {
+    background-color: #1616163a;
     border-radius: 1rem;
     margin: auto;
     margin-top: 1.5rem;
@@ -267,11 +287,10 @@ background: linear-gradient(0deg, rgba(196,74,53,1) 0%, rgba(95,161,153,1) 100%)
 }
 
 .event-reason {
-    border-bottom: 1px solid #C44a35!important;
-    padding: 0.5rem!important;
-    background: rgb(196,74,53);
-    background: linear-gradient(0deg, rgba(196,74,53,1) 0%, rgba(95,161,153,1) 100%);
-    border-radius: 1rem 1rem  0 0;
+    border-bottom: 1px solid #c44a3539 !important;
+    padding: 0.5rem !important;
+    background-color: #c44a3589;
+    border-radius: 1rem 1rem 0 0;
 }
 
 .title-card {
@@ -291,9 +310,10 @@ background: linear-gradient(0deg, rgba(196,74,53,1) 0%, rgba(95,161,153,1) 100%)
     height: 100%;
     height: 9rem;
 }
+
 .buttons-event-notifications {
-   height: 100%;
-   height: 6rem;
+    height: 100%;
+    height: 6rem;
 }
 
 .container-event-map {
@@ -307,36 +327,41 @@ background: linear-gradient(0deg, rgba(196,74,53,1) 0%, rgba(95,161,153,1) 100%)
     height: 100%;
 }
 
+.container-img-login {
+    height: 30vh!important;
+}
+
 .img-login {
-    width: 250px;
-    
-
+height: 70%;
 }
+
+.container-title-login {
+    width: 100%;
+    max-width: 500px;
+}
+
 .title-login {
-    width: 100vw;
-    font-weight: bold;
-}
-.main-account {
-    height: 90%;
-}
 
+    font-weight: bold;
+    text-shadow: 1px 1px #5fa199, 2px 2px #C44a35;
+}
 
 .log-out {
-    font-size: 1.125rem;
+    font-size: 1rem;
 }
 
- .container-user-image {
+.container-user-image {
     position: relative;
     margin: auto;
     width: 100px;
     height: 100px;
- }
+}
 
 .user-image {
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    position:absolute;
+    position: absolute;
 
 }
 
@@ -344,30 +369,54 @@ background: linear-gradient(0deg, rgba(196,74,53,1) 0%, rgba(95,161,153,1) 100%)
     position: absolute;
     top: 80px;
     left: 8px;
+
 }
 
 .personal-data,
 .user-preferences {
-    width: 90%;
+    width: 92%;
     border-radius: 1rem;
-    box-shadow: 0px 1px 5px -1px #53231a;
+    box-shadow: 0px 1px 6px -2px #bcbcbc;
     margin: auto;
     background-color: white;
-    padding: 1rem;
+    padding: 0.50rem;
 }
 
 .form-control {
-    padding: 0!important;
-    margin-bottom: 0.75rem!important;
-    border: none!important;
-    background-color: transparent!important;
-    color: gray!important;
+    padding: 0 !important;
+    margin-bottom: 1rem !important;
+    border: none !important;
+    background-color: #5fa19940 !important;
+    color: gray !important;
+    border-radius: 1rem!important;
+    text-align: center;
+}
+.form-select {
+   background-color: #5fa19940 !important;
+   border-radius: 1rem!important;
 }
 
+.form-control-data {
+    display: block;
+    padding: 0;
+    margin-bottom: 0.75rem;
+    border: none;
+    background-color: transparent;
+    color: gray;
+    border-radius: 1rem;
+}
+
+.form-control-data:focus {
+    border: none;
+    outline: #5fa1999c solid 4px;
+    padding-left: 0.5rem;
+}
+
+
 .form-check-input:checked {
-    background-color: #C44a35!important;
-   
-    border-color: #C44a35!important;
+    background-color: #C44a35 !important;
+
+    border-color: #C44a35 !important;
 }
 
 .button-save {
@@ -377,15 +426,15 @@ background: linear-gradient(0deg, rgba(196,74,53,1) 0%, rgba(95,161,153,1) 100%)
 }
 
 .button-gender {
-    padding: 0 1rem!important;
-    border:none!important;
-    border-radius: 1rem!important;
-    background-color: gray!important;
-    color: white!important;
+    padding: 0 1rem !important;
+    border: none !important;
+    border-radius: 1rem !important;
+    background-color: gray !important;
+    color: white !important;
 }
 
 .text-register {
-    color: rgb(51, 51, 51);
+    color: rgb(116, 116, 116);
 }
 
 .button-register {
@@ -394,54 +443,61 @@ background: linear-gradient(0deg, rgba(196,74,53,1) 0%, rgba(95,161,153,1) 100%)
 }
 
 a {
-    text-decoration: none!important;
-    color: rgb(86, 86, 86)!important;
+    text-decoration: none !important;
+    color: rgb(128, 128, 128) !important;
 }
 
 .button-login {
-    background: rgb(196,74,53);
-background: linear-gradient(0deg, rgba(196,74,53,1) 0%, rgba(95,161,153,1) 100%);
-border: none;
-padding: 0.75rem;
-border-radius: 1.75rem;
-color: white!important;
+    background: rgb(196, 74, 53);
+    background: linear-gradient(0deg, rgba(196, 74, 53, 1) 0%, rgba(95, 161, 153, 1) 100%);
+    border: none;
+    padding: 0.75rem;
+    border-radius: 1.75rem;
+    color: white !important;
 
 }
 
 .button-google {
     background: gray;
-  
+
     border: none;
     padding: 0.75rem;
     border-radius: 1.75rem;
     color: white;
-   width: 100%;
+    width: 100%;
 }
 
 .button-go-back {
-    background-color: #5fa199!important;
-    border-radius: 1rem!important;
-    padding: 0.5rem 2rem!important;
-    color: white!important;
-    
+    background: rgb(196, 74, 53);
+    background: linear-gradient(0deg, rgba(196, 74, 53, 1) 0%, rgba(95, 161, 153, 1) 100%);
+    border-radius: 1rem !important;
+    padding:  0.5rem 3rem  0.4rem 3rem!important;
+    color: white !important;
+
 }
 
 .modal-body-event {
-    overflow: hidden!important;
+    overflow: hidden !important;
 }
 
 .modal-footer {
-    padding: 0.25rem!important;
-    border: none!important;
+    padding: 0.25rem !important;
+    border: none !important;
 }
 
 .modal-header {
-    border: none!important;
+    border: none !important;
+    background: rgb(196, 74, 53);
+    background: linear-gradient(0deg, rgba(196, 74, 53, 1) 0%, rgba(95, 161, 153, 1) 100%);
+    color: white;
+    border-radius: 0 0 1rem 1rem!important;
 }
 
 .input-login {
-    padding: 0.5rem!important;
-    border-radius: 1.5rem!important;
+    padding: 0.5rem !important;
+    border-radius: 1.5rem !important;
+    border: 3px solid #5fa19991 !important;
+    background-color: transparent!important;
 }
 
 /* input:focus {
@@ -450,4 +506,137 @@ color: white!important;
 
 .normalize-h {
     font-size: 1.125rem;
+}
+
+.banner {
+    background: rgb(196, 74, 53);
+    background: linear-gradient(0deg, rgba(196, 74, 53, 1) 0%, rgba(95, 161, 153, 1) 100%);
+
+}
+
+.header-account {
+    height: 2rem;
+}
+
+.main-account {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex-grow: 1;
+    max-width: 100vw;
+}
+.main-login {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+input[type="submit"] {
+    border-radius: 1rem !important;
+    padding:  0.5rem 3rem  0.4rem 3rem!important;
+    color: white !important;
+    border: none!important;
+    box-shadow: unset!important;
+    margin: auto;
+    background-color: #C44a35;
+}
+
+.title-modal {
+    border-bottom: 3px solid #c44a35b4;
+    padding-bottom: 0.5rem;
+}
+
+@media (orientation: landscape) {
+    .container-title-home {
+        width: 49%;
+        padding: unset;
+    }
+
+    .title-home {
+        text-align: start !important;
+        padding-left: 1rem !important;
+    }
+
+    .main {
+        display: flex !important;
+        flex-direction: row !important;
+    }
+
+    .main-account {
+        display: flex !important;
+        flex-direction: row !important;
+        justify-content: space-evenly !important;
+        align-items: center;
+        gap: 1rem;
+    }
+
+    .personal-data {
+        margin: unset !important;
+    }
+
+    .container-info {
+        width: 50%;
+        max-height: 100%;
+        
+    }
+
+    .important-info {
+        background-color: #C44a35;
+        padding: 1.25rem;
+        width: 80%;
+        text-align: center;
+        color: white;
+
+    }
+
+    .contact {
+        border-radius: 2rem 0 0 2rem !important;
+        margin-left: auto;
+    }
+
+    .h-see {
+        margin: unset !important;
+        padding-left: 1rem !important;
+    }
+
+    .h-coming {
+        text-align: right !important;
+    }
+
+    /* .banner {
+        display: flex;
+        flex-direction: column;
+        justify-content: start!important;
+        align-items: center;
+    } */
+    .personal-data,
+    .user-preferences {
+        border-radius: 1rem;
+        box-shadow: 0px 1px 6px -2px #bcbcbc;
+        margin: unset;
+        background-color: rgb(255, 252, 252);
+        padding: 1rem;
+        width: 38%;
+    }
+
+    .banner {
+        height: 80%;
+        border-radius: 1rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 2.5rem 0;
+    }
+    .user-preferences {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .user-preferences,
+    .banner {
+        height: 70%;
+        width: 28%;
+        margin: unset;
+    }
 }
