--- a/public/styles.css
+++ b/public/styles.css
@@ -10,9 +10,30 @@
     width: 0;
     background: transparent;
 }
+.light-mode {
+    --color-one: #C44a35;
+    --color-two: #5fa199;
+    --color-three:  #fdf9f9;
+    --font-color-one: black;
+    --font-color-two: gray;
+    --font-color-three: white;
+    --background-color: white;
+    --background-color-two: rgb(138, 138, 138);
 
+
+}
+.dark-mode {
+   --color-one: #C44a35;
+    --color-two: #5fa199;
+
+    --color-three:  #0e0e0e;
+     --font-color-one: rgb(237, 237, 237);
+    --font-color-two: rgb(178, 178, 178);
+    --font-color-three: white;
+    --background-color: #0a192f;
+    --background-color-two: rgb(19, 19, 19);
+}
 body {
-    background-color: white !important;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -20,13 +41,15 @@ body {
     max-height: 100vh;
     font-family: Poppins !important;
     scrollbar-width: none;
+}
 
+#app {
+    position: relative;
 }
 
 .body {
     max-height: 100vh;
     overflow-x: hidden;
-
 }
 
 .button-normalize {
@@ -37,19 +60,19 @@ body {
     font: inherit;
     cursor: pointer;
     outline: inherit;
-
 }
 
 .container-phone {
-    background-color: white !important;
+    background-color: var(--background-color)  !important;
     width: 100vw;
     height: 100vh;
     max-height: 100vh;
     max-width: 100vw;
+    color: var(--font-color-one);
 }
 
 .top {
-    height: 5rem;
+    height: 4rem;
 }
 
 .container-user-img {
@@ -60,6 +83,7 @@ body {
     background-size: cover;
     background-position-x: center;
     background-position-y: center;
+    margin: unset;
 }
 
 .button-notifications {
@@ -76,16 +100,19 @@ body {
 
 .username {
     font-size: 1.13rem;
+    color: var(--font-color-one)
 }
 
 .main {
-    background-image: url(./assets/img/bg-home.jpg);
-    background-size: cover;
+    background-image: url(./assets/img/bg-home.webp);
+    background-size: contain;
+    background-repeat: no-repeat;
     background-position-x: 50%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     flex-grow: 1;
+    padding-bottom: 3.5rem;
 }
 
 .container-title-home {
@@ -169,10 +196,11 @@ background: linear-gradient(0deg, rgba(196,74,53,1) 0%, rgba(218,197,31,1) 100%)
 .header-schedule {
     width: 100%;
     position: fixed;
-    background-color: rgb(255, 255, 255);
+    background-color: var(--background-color);
     padding-bottom: 0.5rem;
     border-radius: 0 0 1rem 1rem;
     z-index: 1;
+    box-shadow: 0px 1px 10px -5px gray;
 }
 
 .main-schedule {
@@ -181,6 +209,7 @@ background: linear-gradient(0deg, rgba(196,74,53,1) 0%, rgba(218,197,31,1) 100%)
     max-width: 100vw;
     width: 100vw;
     padding-bottom: 4rem !important;
+    background-color: var(--background-color);
 }
 
 .title-schedule {
@@ -220,7 +249,7 @@ ul {
     align-items: center !important;
     justify-content: center;
     border: none !important;
-    color: rgb(0, 0, 0) !important;
+    color: var(--font-color-one) !important;
 }
 
 .container-input {
@@ -270,7 +299,7 @@ legend {
 }
 
 .card-event {
-    background-color: #1616163a;
+    background-color: var(--background-color-two);
     border-radius: 1rem;
     margin: auto;
     margin-top: 1.5rem;
@@ -280,7 +309,7 @@ legend {
 }
 
 .card-event-notification {
-    background-color: #1616163a;
+    background-color: var(--background-color-two);
     border-radius: 1rem;
     margin: auto;
     margin-top: 1.5rem;
@@ -381,16 +410,22 @@ legend {
     border-radius: 1rem;
     box-shadow: 0px 1px 6px -2px #bcbcbc;
     margin: auto;
-    background-color: white;
-    padding: 0.50rem;
+    background-color: var(--color-three);
+    padding: 0.75rem 0.5rem;
+  
+
 }
+
+/* .personal-data {
+  margin-top: 0.5rem;
+}  */
 
 .form-control {
     padding: 0 !important;
     margin-bottom: 1rem !important;
     border: none !important;
-    background-color: #5fa19940 !important;
-    color: gray !important;
+    background-color: rgba(193, 255, 249, 0.417) !important;
+    color: var(--font-color-two) !important;
     border-radius: 1rem !important;
     text-align: center;
 }
@@ -398,6 +433,10 @@ legend {
 .form-select {
     background-color: #5fa19940 !important;
     border-radius: 1rem !important;
+    color: var(--font-color-one)!important;
+}
+option {
+    color: var(--font-color-three)!important;
 }
 
 .form-control-data {
@@ -442,7 +481,7 @@ legend {
 }
 
 .button-register {
-    color: black;
+    color: var(--font-color-one);
     font-weight: 500;
 }
 
@@ -480,6 +519,10 @@ a {
 
 }
 
+.modal-content {
+    background-color: var(--background-color)!important;
+}
+
 .modal-body-event {
     overflow: hidden !important;
 }
@@ -515,6 +558,11 @@ a {
 .banner {
     background: rgb(196, 74, 53);
     background: linear-gradient(0deg, rgba(196, 74, 53, 1) 0%, rgba(95, 161, 153, 1) 100%);
+    height: 23%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
 }
 
@@ -525,9 +573,10 @@ a {
 .main-account {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-grow: 1;
     max-width: 100vw;
+    padding-bottom: 2.5rem; 
 }
 
 .main-login {
@@ -576,6 +625,10 @@ input[type="submit"] {
     .main {
         display: flex !important;
         flex-direction: row !important;
+        background-position-x: 50%;
+        background-position-y: 40%;
+        background-size: contain;
+        background-repeat: no-repeat;
     }
 
     .main-account {
@@ -583,7 +636,8 @@ input[type="submit"] {
         flex-direction: row !important;
         justify-content: space-evenly !important;
         align-items: center;
-        gap: 1rem;
+      
+      
     }
 
     .personal-data {
@@ -634,7 +688,6 @@ input[type="submit"] {
         border-radius: 1rem;
         box-shadow: 0px 1px 6px -2px #bcbcbc;
         margin: unset;
-        background-color: rgb(255, 252, 252);
         padding: 1rem;
         width: 38%;
     }
@@ -675,6 +728,12 @@ input[type="submit"] {
         background-color: transparent !important;
     }
 
+
+    .header-account {
+        height: 2rem;
+        box-shadow: 0 1px 15px -5px rgb(151, 142, 142);
+    }
+
     .header-login {
         position: absolute !important;
         top: 0 !important;
@@ -694,10 +753,5 @@ input[type="submit"] {
 
     .img-login {
         height: 50vh;
-    }
-
-    .main {
-        background-position-x: 50%;
-        background-position-y: 40%;
     }
 }
