--- a/public/styles.css
+++ b/public/styles.css
@@ -10,29 +10,36 @@
     width: 0;
     background: transparent;
 }
+
 .light-mode {
     --color-one: #C44a35;
     --color-two: #5fa199;
-    --color-three:  #fdf9f9;
+    --color-three: #fdf9f9;
     --font-color-one: black;
     --font-color-two: gray;
     --font-color-three: white;
-    --background-color: white;
-    --background-color-two: rgb(138, 138, 138);
-
+    --background-color: #fff5f3;
+    --background-color-two: rgb(172, 169, 169);
+    --color-shadow: gray;
+    --border: none;
+    --border-two: none;
 
 }
-.dark-mode {
-   --color-one: #C44a35;
-    --color-two: #5fa199;
 
-    --color-three:  #0e0e0e;
-     --font-color-one: rgb(237, 237, 237);
-    --font-color-two: rgb(178, 178, 178);
+.dark-mode {
+    --color-one: #ae5140;
+    --color-two: #608e89;
+    --color-three: #0e0e0e;
+    --font-color-one: rgb(237, 237, 237);
+    --font-color-two: rgb(198, 198, 198);
     --font-color-three: white;
     --background-color: #0a192f;
     --background-color-two: rgb(19, 19, 19);
+    --color-shadow: #143059;
+    --border: 2px solid #ae504073;
+    --border-two: 2px solid #4b827caf;
 }
+
 body {
     display: flex;
     justify-content: center;
@@ -63,7 +70,7 @@ body {
 }
 
 .container-phone {
-    background-color: var(--background-color)  !important;
+    background-color: var(--background-color) !important;
     width: 100vw;
     height: 100vh;
     max-height: 100vh;
@@ -105,7 +112,8 @@ body {
 
 .main {
     background-image: url(./assets/img/bg-home.webp);
-    background-size: contain;
+    background-size: cover;
+
     background-repeat: no-repeat;
     background-position-x: 50%;
     display: flex;
@@ -125,6 +133,7 @@ body {
     text-align: end;
     background-color: #16161600;
     text-shadow: 1px 1px #5fa199, 2px 2px #C44a35;
+    padding-right: 0.5rem;
 }
 
 .container-info {
@@ -136,12 +145,26 @@ body {
 }
 
 .important-info {
-    background-color: #C44a35;
+    background-color: var(--color-one);
     padding: 2rem;
     width: 80%;
     text-align: center;
     color: white;
 
+}
+
+.h-see {
+    text-align: right !important;
+    padding-right: 0.5rem;
+    text-shadow: 1px 1px #C44a35, 2px 2px white;
+    color: #43857d;
+}
+
+.h-coming {
+    text-align: right !important;
+    padding-right: 0.5rem;
+    text-shadow: 1px 1px #C44a35, 2px 2px white;
+    color: #43857d;
 }
 
 .rules {
@@ -155,12 +178,8 @@ body {
 }
 
 .nav-bar {
-    /* background: rgb(196,74,53);
-background: linear-gradient(0deg, rgba(196,74,53,1) 0%, rgba(218,197,31,1) 100%); */
     background: rgb(196, 74, 53);
     background: linear-gradient(0deg, rgba(196, 74, 53, 1) 0%, rgba(95, 161, 153, 1) 100%);
-    /* position: fixed;
-    bottom: 0; */
     width: 100%;
     height: 2.5rem;
     display: flex;
@@ -200,7 +219,7 @@ background: linear-gradient(0deg, rgba(196,74,53,1) 0%, rgba(218,197,31,1) 100%)
     padding-bottom: 0.5rem;
     border-radius: 0 0 1rem 1rem;
     z-index: 1;
-    box-shadow: 0px 1px 10px -5px gray;
+    box-shadow: 0px 1px 10px -5px var(--color-shadow);
 }
 
 .main-schedule {
@@ -221,13 +240,14 @@ background: linear-gradient(0deg, rgba(196,74,53,1) 0%, rgba(218,197,31,1) 100%)
 
 .schedule-selection {
     width: 90%;
-    background-color: #1616163a;
+    background-color: var(--background-color-two);
     margin: auto;
     border-radius: 1rem;
     height: 3rem;
     display: flex;
     align-items: center !important;
     justify-content: center;
+    border: var(--border)
 }
 
 ol,
@@ -269,7 +289,6 @@ ul {
 
 }
 
-
 legend {
     font-size: 1rem !important;
     margin-bottom: 0 !important;
@@ -287,13 +306,6 @@ legend {
     color: white !important;
 }
 
-
-
-/* .selection:hover {
-    background-color: #C44a35 !important;
-    border: none !important;
-} */
-
 .container-cards {
     max-width: 100vw;
 }
@@ -306,23 +318,27 @@ legend {
     position: relative;
     width: 90%;
     height: 9rem;
+    border: var(--border)
 }
 
 .card-event-notification {
     background-color: var(--background-color-two);
-    border-radius: 1rem;
+    border-radius: 1.1rem;
     margin: auto;
     margin-top: 1.5rem;
     position: relative;
     width: 90%;
     height: 10rem;
+    border: var(--border-two)
 }
 
 .event-reason {
     border-bottom: 1px solid #c44a3539 !important;
     padding: 0.5rem !important;
-    background-color: #c44a3589;
+    background-color: var(--color-two);
     border-radius: 1rem 1rem 0 0;
+    color: white;
+
 }
 
 .title-card {
@@ -408,17 +424,13 @@ legend {
 .user-preferences {
     width: 92%;
     border-radius: 1rem;
-    box-shadow: 0px 1px 6px -2px #bcbcbc;
+    box-shadow: 0px 1px 6px -2px var(--color-shadow);
     margin: auto;
     background-color: var(--color-three);
     padding: 0.75rem 0.5rem;
-  
+
 
 }
-
-/* .personal-data {
-  margin-top: 0.5rem;
-}  */
 
 .form-control {
     padding: 0 !important;
@@ -433,10 +445,11 @@ legend {
 .form-select {
     background-color: #5fa19940 !important;
     border-radius: 1rem !important;
-    color: var(--font-color-one)!important;
+    color: var(--font-color-one) !important;
 }
+
 option {
-    color: var(--font-color-three)!important;
+    color: var(--font-color-three) !important;
 }
 
 .form-control-data {
@@ -520,7 +533,7 @@ a {
 }
 
 .modal-content {
-    background-color: var(--background-color)!important;
+    background-color: var(--background-color) !important;
 }
 
 .modal-body-event {
@@ -547,10 +560,6 @@ a {
     background-color: transparent !important;
 }
 
-/* input:focus {
-    border: 2px solid #5fa199!important;
-} */
-
 .normalize-h {
     font-size: 1.125rem;
 }
@@ -576,7 +585,7 @@ a {
     justify-content: space-evenly;
     flex-grow: 1;
     max-width: 100vw;
-    padding-bottom: 2.5rem; 
+    padding-bottom: 2.5rem;
 }
 
 .main-login {
@@ -611,6 +620,12 @@ input[type="submit"] {
     margin: 1rem;
 }
 
+.span-gray {
+    color: var(--font-color-two);
+    text-align: center;
+    display: block;
+}
+
 @media (orientation: landscape) {
     .container-title-home {
         width: 49%;
@@ -636,12 +651,6 @@ input[type="submit"] {
         flex-direction: row !important;
         justify-content: space-evenly !important;
         align-items: center;
-      
-      
-    }
-
-    .personal-data {
-        margin: unset !important;
     }
 
     .container-info {
@@ -651,12 +660,11 @@ input[type="submit"] {
     }
 
     .important-info {
-        background-color: #C44a35;
+
         padding: 1.25rem;
         width: 80%;
         text-align: center;
         color: white;
-
     }
 
     .contact {
@@ -668,28 +676,25 @@ input[type="submit"] {
         margin: unset !important;
         padding-left: 1rem !important;
         text-shadow: 1px 1px #C44a35, 2px 2px white;
-        color: #5fa199;
+    
+        text-align: left !important;
+        margin-bottom: 0.5rem !important;
     }
 
     .h-coming {
-        text-align: right !important;
+        text-align: left !important;
         text-shadow: 1px 1px #C44a35, 2px 2px white;
-        color: #5fa199;
+        padding-left: 1rem;
     }
 
-    /* .banner {
-        display: flex;
-        flex-direction: column;
-        justify-content: start!important;
-        align-items: center;
-    } */
     .personal-data,
     .user-preferences {
         border-radius: 1rem;
-        box-shadow: 0px 1px 6px -2px #bcbcbc;
+        box-shadow: 0px 1px 6px -2px var(--color-shadow);
         margin: unset;
         padding: 1rem;
-        width: 38%;
+        width: 40%;
+        padding: 0.5rem 0.75rem;
     }
 
     .main-login {
@@ -731,7 +736,7 @@ input[type="submit"] {
 
     .header-account {
         height: 2rem;
-        box-shadow: 0 1px 15px -5px rgb(151, 142, 142);
+        box-shadow: 0 1px 15px -5px var(--color-shadow);
     }
 
     .header-login {
